# SFML_basic_Game_class

./: CMakeLists.txt  Game.cpp  Game.h  Player.cpp  Player.h
